@@ -1,3 +1,7 @@
+2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b184
+
+	* Fix: poll_properties and reset_votes
+
 2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b183
 
 	* Fix: Set Nested Properties
